--- a/pages/challenge/challenge.module.scss
+++ b/pages/challenge/challenge.module.scss
@@ -4,7 +4,7 @@
     flex: 1 1 auto;
     height: 100%;
 
-    @media screen and (max-width: 680px) {
+    @media screen and (max-width: 740px) {
         flex-direction: column;
     }
 }
@@ -19,7 +19,7 @@
         height: 100%;
     }
 
-    @media screen and (max-width: 680px) {
+    @media screen and (max-width: 740px) {
         width: 100%;
 
         > * {
@@ -35,11 +35,23 @@
     flex-direction: column;
     justify-content: center;
     padding: 0 1.5rem 0 0;
+
+    @media screen and (max-width: 740px) {
+        max-width: none;
+        margin-top: -4rem;
+        z-index: 2;
+
+        .challenge-title {
+            color: white;
+            margin-bottom: 1rem;
+        }
+    }
 }
 
 .challenge-title {
     font-size: 2.5rem;
     margin-bottom: 0.5rem;
+    margin-top: 1rem;
 }
 
 .challenge-description {
@@ -59,18 +71,26 @@
     &[data-successful="true"] .submit-passcode-btn-container {
         opacity: 0.3;
     }
+
+    @media screen and (max-width: 1000px) {
+        flex-direction: column;
+        align-items: flex-end;
+
+        .submit-passcode-btn-container {
+            margin-top: 1rem;
+        }
+    }
 }
 
 .passcode-container {
     flex: 1 1 auto;
     display: flex;
     justify-content: flex-end;
-    margin-right: 1.25rem;
 }
 
 .submit-passcode-btn-container {
     flex: 0 0 auto;
-    padding: 0 1rem;
+    padding: 0 0.75rem;
 }
 
 .stamp-container {
