--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -170,3 +170,27 @@ button {
     --accent-800: #792f5a;
     --accent-900: #50213c;
 }
+
+[data-reach-dialog-overlay] {
+    background: hsla(0, 0%, 0%, 0.33);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: auto;
+    animation: fadein 0.3s;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
