--- a/pages/challenge/challenge.module.scss
+++ b/pages/challenge/challenge.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     flex: 1 1 auto;
-    height: 100%;
 
     @media screen and (max-width: 740px) {
         flex-direction: column;
@@ -91,6 +90,7 @@
 .submit-passcode-btn-container {
     flex: 0 0 auto;
     padding: 0 0.75rem;
+    margin-bottom: 2rem;
 }
 
 .stamp-container {
