--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -23,11 +23,28 @@
     &:hover {
         box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15), 0 1px 6px rgba(0, 0, 0, 0.2);
     }
+
+    &[data-completed="true"] > :last-child {
+        z-index: 2;
+    }
+
+    &[data-completed="true"] .image-container:after {
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgb(33 36 40 / 80%);
+        position: absolute;
+        z-index: 11;
+    }
 }
 
 .image-container {
     display: grid;
     grid-template-areas: "image";
+    position: relative;
+    z-index: 1;
 
     &:hover .hover-image {
         visibility: visible;
