--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -28,16 +28,16 @@
         z-index: 2;
     }
 
-    // &[data-completed="true"] .image-container:after {
-    //     content: "";
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background: rgb(33 36 40 / 80%);
-    //     position: absolute;
-    //     z-index: 1;
-    // }
+    &[data-completed="true"] .image-container:after {
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgb(33 36 40 / 80%);
+        position: absolute;
+        z-index: 1;
+    }
 }
 
 .image-container {
@@ -114,6 +114,7 @@
     text-align: center;
     padding: 0 2rem;
     pointer-events: all;
+    z-index: 2;
 
     &:hover .overlay-text {
         visibility: visible;
