--- a/pages/challenge/challenge.module.scss
+++ b/pages/challenge/challenge.module.scss
@@ -54,9 +54,14 @@
 }
 
 .challenge-title {
-    font-size: 2.125rem;
+    font-size: 2.5rem;
     margin-bottom: 0.5rem;
     margin-top: 1rem;
+}
+
+.challenge-title-avish {
+    composes: challenge-title;
+    font-size: 2rem;
 }
 
 .challenge-description {
