--- a/components/Map/Map.module.scss
+++ b/components/Map/Map.module.scss
@@ -19,11 +19,17 @@
 }
 
 .pin-icon {
-    font-size: 4rem;
+    color: var(--neutral-700);
+    height: 2.5rem;
 }
 
 .pin-text {
-    font-size: 1.3em;
+    font-size: 1.25rem;
+    margin-left: 0.25rem;
+    background: #000000b5;
+    padding: 0.25rem 0.75rem;
+    border-radius: 8px;
+    color: white;
 }
 
 @media screen and (min-width: 799px) {
